Lowered rendered rows on backend, try to fix scrollbar

--- a/music_controller/frontend/static/css/index.css
+++ b/music_controller/frontend/static/css/index.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   color: white;
+  /* overflow-y: scroll !important; */
 }
 
 #main {
@@ -48,8 +49,38 @@ body {
   color: white;
 }
 
+.info-section {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.info-section h3 {
+  margin-top: 0;
+  font-size: 18px;
+  color: #333;
+}
+
+.info-section p {
+  margin: 5px 0;
+  font-size: 16px;
+  color: #555;
+}
+
+.info-section span.label {
+  font-weight: bold;
+  color: #000;
+}
+
 .width-100 {
   width: 100%;
+  /* overflow-y: scroll !important; */
+}
+
+.scrollable-section {
+  /* height: 100; */
 }
 
 .full-width {
